# quickjs-android

./: .gitmodules  build.gradle  gradle.properties
android-test/: CMakeLists.txt  build.gradle
android-test/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
quickjs/: CMakeLists.txt  qjscalc.c  repl.c
